--- a/analysis/multi_tissue_ldmerge.Rmd
+++ b/analysis/multi_tissue_ldmerge.Rmd
@@ -139,7 +139,7 @@ ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir,
                                                thin = thin)
 
 
-para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,c(NA,ctwas_parameters$enrichment),ctwas_parameters$group_pve)
 colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
 
 DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
@@ -175,7 +175,7 @@ ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir,
                                                thin = thin)
 
 
-para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,c(NA,ctwas_parameters$enrichment),ctwas_parameters$group_pve)
 colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
 
 DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
@@ -211,7 +211,7 @@ ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir,
                                                thin = thin)
 
 
-para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,c(NA,ctwas_parameters$enrichment),ctwas_parameters$group_pve)
 colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
 
 DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
@@ -248,7 +248,7 @@ ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir,
                                                thin = thin)
 
 
-para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,c(NA,ctwas_parameters$enrichment),ctwas_parameters$group_pve)
 colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
 
 DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
@@ -285,7 +285,7 @@ ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir,
                                                thin = thin)
 
 
-para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,c(NA,ctwas_parameters$enrichment),ctwas_parameters$group_pve)
 colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
 
 DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
@@ -322,7 +322,7 @@ ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir,
                                                thin = thin)
 
 
-para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,c(NA,ctwas_parameters$enrichment),ctwas_parameters$group_pve)
 colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
 
 DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
