--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -22,7 +22,7 @@ editor_options:
   * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html)
   * [Multi-tissue analysis, merging the LD blocks](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge.html)
 
-LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_ten_tissues.html)
+  * LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_ten_tissues.html)
 
 # Single QTL analysis
 
@@ -32,4 +32,4 @@ LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysi
 
 # Simulation results
 
-Correlated tissues simulation [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_4tissues_correlated.html)
+  * Two same tissues simulation [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_2tissues_same.html)
