--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -14,8 +14,9 @@ editor_options:
 
 # LD mismatch diagnosis
 
-  * [LD mismatch diagnosis using `SuSiE_RSS`](detect_LD_mismatch_gwas_UKBBref_susie_rss.html)
-  * [Detect LD mismatch for LDL and aFib using `DENTIST` vs.`SuSiE_RSS`](detect_LD_mismatch_gwas_UKBBref_DENTIST_susie_rss.html)
+  * [LD mismatch diagnosis using SuSiE_RSS](detect_LD_mismatch_gwas_UKBBref_susie_rss.html)
+  * [Detect LD mismatch for LDL and aFib using DENTIST vs. SuSiE_RSS](detect_LD_mismatch_gwas_UKBBref_DENTIST_susie_rss.html)
+  * [Compare DENTIST and SuSiE_RSS for LD mismatch detection on example locus with manually changed z-scores](test_LD_mismatch_DENTIST_susierss.html)
 
 # Multi-tissue 
 
