--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -33,3 +33,7 @@ editor_options:
 # Simulation results
 
   * Two same tissues simulation [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_2tissues_same.html)
+
+# Region Merge
+
+  * Test region merge [link](https://sq-96.github.io/multigroup_ctwas_analysis/region_merge_test.html)
