--- a/analysis/region_merge_test.Rmd
+++ b/analysis/region_merge_test.Rmd
@@ -25,7 +25,7 @@ configtag = 2
 UKBB individual genotype data. PredictedDB Liver weights. UKBB LD matrix. Gene PVE = 0.05 and SNP PVE = 0.3. 
 
 
-```{r pipplotfunc echo=F}
+```{r pipplotfunc, echo=F}
 plot_PIP <- function(outputdir, configtag, runtag,  simutags, ...){
    phenofs <- paste0(outputdir, "ukb-s80.45-3", "_simu", simutags, "-pheno.Rd")
    susieIfs <- paste0(outputdir, runtag, "_simu",simutags, "_config", configtag,"_LDR.susieIrss.txt")
