--- a/analysis/region_merge_test.Rmd
+++ b/analysis/region_merge_test.Rmd
@@ -13,10 +13,12 @@ library(data.table)
 source("/project/xinhe/shengqian/cTWAS_simulation/summarize_basic_plots.R")
 source("/project/xinhe/shengqian/cTWAS_simulation/summarize_ctwas_plots.R")
 
-outputdir1 = "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_oldmergeoff/"
+outputdir1 = "/project/xinhe/shengqian/cTWAS_simulation/simulation_ctwas_rss_20210416/"
 outputdir2 = "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_oldmergeon/"
 outputdir3 = "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_mergeoff/"
-runtag = "ukb-s80.45-3"
+runtag1 = "ukb-s80.45-adi"
+runtag2 = "ukb-s80.45-3"
+runtag3 = "ukb-s80.45-3"
 configtag = 2
 ```
 
@@ -27,7 +29,7 @@ UKBB individual genotype data. PredictedDB Liver weights. UKBB LD matrix. Gene P
 
 ```{r pipplotfunc, echo=F}
 plot_PIP <- function(outputdir, configtag, runtag,  simutags, ...){
-   phenofs <- paste0(outputdir, "ukb-s80.45-3", "_simu", simutags, "-pheno.Rd")
+   phenofs <- paste0(outputdir, runtag, "_simu", simutags, "-pheno.Rd")
    susieIfs <- paste0(outputdir, runtag, "_simu",simutags, "_config", configtag,"_LDR.susieIrss.txt")
 
    f1 <- caliPIP_plot(phenofs, susieIfs, ...) 
@@ -36,9 +38,9 @@ plot_PIP <- function(outputdir, configtag, runtag,  simutags, ...){
 ```
 
 ```{r pipplot, fig.width= 12, fig.height= 4, echo=F}
-simutaglist = list(paste(1, 1:5, sep = "-"), paste(1, 1:5, sep="-"), paste(1, 1:5, sep="-"))
-f1 <- plot_PIP(outputdir1, configtag, runtag, simutaglist[[1]], main = "old merge off")
-f2 <-  plot_PIP(outputdir2, configtag, runtag, simutaglist[[2]], main = "merge on")
-f3 <-  plot_PIP(outputdir3, configtag, runtag, simutaglist[[3]], main = "new merge off")
+simutaglist = list(paste(4, 1:5, sep = "-"), paste(1, 1:5, sep="-"), paste(1, 1:5, sep="-"))
+f1 <- plot_PIP(outputdir1, configtag, runtag1, simutaglist[[1]], main = "old merge off")
+f2 <-  plot_PIP(outputdir2, configtag, runtag2, simutaglist[[2]], main = "merge on")
+f3 <-  plot_PIP(outputdir3, configtag, runtag3, simutaglist[[3]], main = "new merge off")
 gridExtra::grid.arrange(f1, f2, f3, ncol =3)
 ```
