--- a/analysis/region_merge_test.Rmd
+++ b/analysis/region_merge_test.Rmd
@@ -13,7 +13,7 @@ library(data.table)
 source("/project/xinhe/shengqian/cTWAS_simulation/summarize_basic_plots.R")
 source("/project/xinhe/shengqian/cTWAS_simulation/summarize_ctwas_plots.R")
 
-#outputdir1 = "/project/xinhe/shengqian/cTWAS_simulation/simulation_ctwas_rss_20210416/"
+outputdir1 = "/project/xinhe/shengqian/cTWAS_simulation/simulation_ctwas_rss_20210416/"
 #outputdir2 = "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_oldmergeon/"
 #outputdir3 = "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_mergeoff/"
 outputdir = "/project2/mstephens/causalTWAS/simulations/simulation_ctwas_rss_20210416/"
@@ -21,6 +21,7 @@ runtag = "ukb-s80.45-adi"
 #runtag2 = "ukb-s80.45-3"
 #runtag3 = "ukb-s80.45-3"
 configtag = 1
+configtag1 = 2
 ```
 
 ## PIP calibration
@@ -38,6 +39,16 @@ plot_PIP <- function(outputdir, configtag, runtag,  simutags, ...){
 }
 ```
 
+```{r pipplotfunc1, echo=F}
+plot_PIP1 <- function(outputdir, configtag, runtag,  simutags, ...){
+   phenofs <- paste0(outputdir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(outputdir, runtag, "_simu",simutags, "_config", configtag,"_LDR.susieIrss.txt")
+
+   f1 <- caliPIP_plot(phenofs, susieIfs, ...) 
+   return(f1)
+}
+```
+
 ```{r pipplot, fig.width= 12, fig.height= 4, echo=F}
 #simutaglist = list(paste(4, 1:5, sep = "-"), paste(1, 1:5, sep="-"), paste(1, 1:5, sep="-"))
 #f1 <- plot_PIP(outputdir1, configtag, runtag1, simutaglist[[1]], main = "old merge off")
@@ -47,9 +58,9 @@ plot_PIP <- function(outputdir, configtag, runtag,  simutags, ...){
 ```
 
 ```{r fig.width= 4, fig.height= 4, echo=F}
-#simutaglist = paste(1, 1:5, sep = "-")
-#f <- plot_PIP(outputdir, configtag, runtag, simutaglist, main = "old merge off")
-#f
+simutaglist = paste(4, 1:5, sep = "-")
+f <- plot_PIP1(outputdir1, configtag1, runtag, simutaglist, main = "old merge off")
+f
 #f2 <-  plot_PIP(outputdir2, configtag, runtag2, simutaglist[[2]], main = "merge on")
 #f3 <-  plot_PIP(outputdir3, configtag, runtag3, simutaglist[[3]], main = "new merge off")
 #gridExtra::grid.arrange(f1, f2, f3, ncol =3)
