--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -33,7 +33,8 @@ editor_options:
 
 # Simulation results
 
-  * Two same tissues simulation [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_2tissues_same.html)
+  * seven uncorrelated tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_tissues_uncorrelated.html)
+  * seven correlated tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_tissues_correlated.html)
 
 # Region Merge
 
