--- a/analysis/simulation_seven_tissues_uncorrelated.Rmd
+++ b/analysis/simulation_seven_tissues_uncorrelated.Rmd
@@ -97,7 +97,7 @@ plot_par_7(truth,est,xlabels = c("Liver","Lung","Whole_Blood","Adipose_Subcutane
 ```
 
 ```{r, fig.width= 4, fig.height= 4}
-f1 <- plot_PIP(configtag, runtag, paste(1, 1:5, sep = "-"), main = "high gene PVE")
+f1 <- plot_PIP(configtag, runtag, paste(1, 1:5, sep = "-"), main = "")
 f1
 ```
 ### Separate effect size parameters
@@ -183,6 +183,6 @@ plot_par_7(truth,est,xlabels = c("Liver","Lung","Whole_Blood","Adipose_Subcutane
 ```
 
 ```{r, fig.width= 4, fig.height= 4}
-f1 <- plot_PIP(configtag, runtag, paste(1, 1:5, sep = "-"), main = "high gene PVE")
+f1 <- plot_PIP(configtag, runtag, paste(1, 1:5, sep = "-"), main = "")
 f1
 ```
