--- a/analysis/simulation_seven_tissues_correlated.Rmd
+++ b/analysis/simulation_seven_tissues_correlated.Rmd
@@ -99,7 +99,7 @@ plot_par_7(truth,est,xlabels = c("Liver","Lung","Whole_Blood","Adipose_Subcutane
 ```
 
 ```{r, fig.width= 4, fig.height= 4}
-f1 <- plot_PIP(configtag, runtag, paste(1, 1:5, sep = "-"), main = "high gene PVE")
+f1 <- plot_PIP(configtag, runtag, paste(1, 1:5, sep = "-"), main = "")
 f1
 ```
 
@@ -188,6 +188,6 @@ plot_par_7(truth,est,xlabels = c("Liver","Lung","Whole_Blood","Adipose_Subcutane
 ```
 
 ```{r, fig.width= 4, fig.height= 4}
-f1 <- plot_PIP(configtag, runtag, paste(1, 1:5, sep = "-"), main = "high gene PVE")
+f1 <- plot_PIP(configtag, runtag, paste(1, 1:5, sep = "-"), main = "")
 f1
 ```
