--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -39,3 +39,7 @@ editor_options:
 # Region Merge
 
   * Test region merge [link](https://sq-96.github.io/multigroup_ctwas_analysis/region_merge_test.html)
+
+# Multi omics and multi tissues analysis
+
+  * LDL - Liver and Adipose - Expression and Splicing [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_Liver_Adipose_E_S.html)
