--- a/analysis/simulation_seven_tissues_correlated.Rmd
+++ b/analysis/simulation_seven_tissues_correlated.Rmd
@@ -80,7 +80,7 @@ y7 <- results_df$prior_Brain_Putamen_basal_ganglia
 
 truth <- rbind(c(1,0.009),c(2,0.009),c(3,0.009),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Liver","Lung","Whole_Blood","Adipose_Subcutaneous","Artery_Tibial","Heart_Left_Ventricle","Stomach"),ylim=c(0,0.025),ylab="Prior inclusion")
+plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate_basal_ganglia","Cerebellar_Hemisphere","Cortex","Hypothalamus","Putamen_basal_ganglia"),ylim=c(0,0.025),ylab="Prior inclusion")
 ```
 
 ```{r}
@@ -95,7 +95,7 @@ y7 <- results_df$pve_Brain_Putamen_basal_ganglia
 
 truth <- rbind(c(1,0.03),c(2,0.03),c(3,0.03),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Liver","Lung","Whole_Blood","Adipose_Subcutaneous","Artery_Tibial","Heart_Left_Ventricle","Stomach"),ylim=c(0,0.06),ylab="PVE")
+plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate_basal_ganglia","Cerebellar_Hemisphere","Cortex","Hypothalamus","Putamen_basal_ganglia"),ylim=c(0,0.06),ylab="PVE")
 ```
 
 ```{r, fig.width= 4, fig.height= 4}
@@ -169,7 +169,7 @@ y7 <- results_df$prior_Brain_Putamen_basal_ganglia
 
 truth <- rbind(c(1,0.009),c(2,0.009),c(3,0.009),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Liver","Lung","Whole_Blood","Adipose_Subcutaneous","Artery_Tibial","Heart_Left_Ventricle","Stomach"),ylim=c(0,0.025),ylab="Prior inclusion")
+plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate_basal_ganglia","Cerebellar_Hemisphere","Cortex","Hypothalamus","Putamen_basal_ganglia"),ylim=c(0,0.025),ylab="Prior inclusion")
 ```
 
 ```{r}
@@ -184,7 +184,7 @@ y7 <- results_df$pve_Brain_Putamen_basal_ganglia
 
 truth <- rbind(c(1,0.03),c(2,0.03),c(3,0.03),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Liver","Lung","Whole_Blood","Adipose_Subcutaneous","Artery_Tibial","Heart_Left_Ventricle","Stomach"),ylim=c(0,0.06),ylab="PVE")
+plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate_basal_ganglia","Cerebellar_Hemisphere","Cortex","Hypothalamus","Putamen_basal_ganglia"),ylim=c(0,0.06),ylab="PVE")
 ```
 
 ```{r, fig.width= 4, fig.height= 4}
