--- a/analysis/simulation_seven_tissues_correlated.Rmd
+++ b/analysis/simulation_seven_tissues_correlated.Rmd
@@ -68,7 +68,7 @@ results_df[,c(which(colnames(results_df)=="simutag"), grep("twas", names(results
 sum(results_df$n_detected_comb_twas_in_causal)/sum(results_df$n_detected_comb_twas)
 ```
 
-```{r}
+```{r, fig.width= 10, fig.height= 5}
 y1 <- results_df$prior_Brain_Cerebellum
 y2 <- results_df$prior_Brain_Hippocampus
 y3 <- results_df$prior_Brain_Caudate_basal_ganglia
@@ -80,10 +80,10 @@ y7 <- results_df$prior_Brain_Putamen_basal_ganglia
 
 truth <- rbind(c(1,0.009),c(2,0.009),c(3,0.009),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate_basal_ganglia","Cerebellar_Hemisphere","Cortex","Hypothalamus","Putamen_basal_ganglia"),ylim=c(0,0.025),ylab="Prior inclusion")
+plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate","Cerebellar","Cortex","Hypothalamus","Putamen"),ylim=c(0,0.025),ylab="Prior inclusion")
 ```
 
-```{r}
+```{r, fig.width= 10, fig.height= 5}
 y1 <- results_df$pve_Brain_Cerebellum
 y2 <- results_df$pve_Brain_Hippocampus
 y3 <- results_df$pve_Brain_Caudate_basal_ganglia
@@ -95,7 +95,7 @@ y7 <- results_df$pve_Brain_Putamen_basal_ganglia
 
 truth <- rbind(c(1,0.03),c(2,0.03),c(3,0.03),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate_basal_ganglia","Cerebellar_Hemisphere","Cortex","Hypothalamus","Putamen_basal_ganglia"),ylim=c(0,0.06),ylab="PVE")
+plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate","Cerebellar","Cortex","Hypothalamus","Putamen"),ylim=c(0,0.06),ylab="PVE")
 ```
 
 ```{r, fig.width= 4, fig.height= 4}
@@ -157,7 +157,7 @@ results_df[,c(which(colnames(results_df)=="simutag"), grep("twas", names(results
 sum(results_df$n_detected_comb_twas_in_causal)/sum(results_df$n_detected_comb_twas)
 ```
 
-```{r}
+```{r, fig.width= 10, fig.height= 5}
 y1 <- results_df$prior_Brain_Cerebellum
 y2 <- results_df$prior_Brain_Hippocampus
 y3 <- results_df$prior_Brain_Caudate_basal_ganglia
@@ -169,10 +169,10 @@ y7 <- results_df$prior_Brain_Putamen_basal_ganglia
 
 truth <- rbind(c(1,0.009),c(2,0.009),c(3,0.009),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate_basal_ganglia","Cerebellar_Hemisphere","Cortex","Hypothalamus","Putamen_basal_ganglia"),ylim=c(0,0.025),ylab="Prior inclusion")
+plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate","Cerebellar","Cortex","Hypothalamus","Putamen"),ylim=c(0,0.025),ylab="Prior inclusion")
 ```
 
-```{r}
+```{r, fig.width= 10, fig.height= 5}
 y1 <- results_df$pve_Brain_Cerebellum
 y2 <- results_df$pve_Brain_Hippocampus
 y3 <- results_df$pve_Brain_Caudate_basal_ganglia
@@ -184,7 +184,7 @@ y7 <- results_df$pve_Brain_Putamen_basal_ganglia
 
 truth <- rbind(c(1,0.03),c(2,0.03),c(3,0.03),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
-plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate_basal_ganglia","Cerebellar_Hemisphere","Cortex","Hypothalamus","Putamen_basal_ganglia"),ylim=c(0,0.06),ylab="PVE")
+plot_par_7(truth,est,xlabels = c("Cerebellum","Hippocampus","Caudate","Cerebellar","Cortex","Hypothalamus","Putamen"),ylim=c(0,0.06),ylab="PVE")
 ```
 
 ```{r, fig.width= 4, fig.height= 4}
