--- a/analysis/LDL_Liver_Adipose_E_S.Rmd
+++ b/analysis/LDL_Liver_Adipose_E_S.Rmd
@@ -154,7 +154,7 @@ DT::datatable(head(data, max(sum(data$combined_pip>0.8), 20)))
 ```
 ```{r echo=FALSE}
 plot_df <- data[data$combined_pip>0.8,]
-plot_df <- cbind(plot_df[,c("genename","combined_pip")],plot_df[,3:6]/plot_df$combined_pip)
+plot_df <- cbind(plot_df[,c("genename","combined_pip")],100*plot_df[,3:6]/plot_df$combined_pip)
 ```
 
 ```{r echo=FALSE}
