--- a/analysis/multi_tissue_ldmerge_enriched_pwy.Rmd
+++ b/analysis/multi_tissue_ldmerge_enriched_pwy.Rmd
@@ -64,7 +64,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -81,7 +81,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -98,7 +98,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 ## KEGG
@@ -114,7 +114,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -133,7 +133,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -150,7 +150,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -167,7 +167,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 ## KEGG
@@ -183,7 +183,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -203,7 +203,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -220,7 +220,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -237,7 +237,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 ## KEGG
@@ -253,7 +253,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -273,7 +273,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -290,7 +290,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -307,7 +307,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 ## KEGG
@@ -323,7 +323,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -343,7 +343,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -360,7 +360,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -377,7 +377,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 ## KEGG
@@ -393,7 +393,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -413,7 +413,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -430,7 +430,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 
@@ -447,7 +447,7 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
 ## KEGG
@@ -463,6 +463,6 @@ gseasusie::interactive_table(logistic.fit, ora)
 ### Susie
 
 ```{r warning=F,message=FALSE}
-create_pip_datatable(linear_fit = linear.fit)
+create_pip_datatable(linear_fit = linear.fit.subset)
 ```
 
